// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown should be rendered correctly 1`] = `
<button
  className="container uui-button-box uui-enabled -clickable uui-button button-color-primary root mode-solid color-sky size-36 style-square"
  href={null}
  onClick={[Function]}
  role="button"
  tabIndex={0}
  type="button"
>
  <div
    className="uui-caption line-height-18 font-size-14 v-padding-8"
  >
    Test
  </div>
  <div
    className="container uui-icon uui-enabled"
    style={Object {}}
  >
    <svg
      className=""
    />
  </div>
</button>
`;

exports[`Dropdown should be rendered correctly with extra props 1`] = `
<button
  className="container uui-button-box uui-enabled -clickable uui-button button-color-primary root mode-solid color-sky size-36 style-square"
  href={null}
  onClick={[Function]}
  role="button"
  tabIndex={0}
  type="button"
>
  <div
    className="uui-caption line-height-18 font-size-14 v-padding-8"
  >
    test
  </div>
  <div
    className="container uui-icon uui-enabled"
    style={Object {}}
  >
    <svg
      className=""
    />
  </div>
</button>
`;
